tracing-wide/tests/ui/bare_flag.stderr
error: expected `key = value`; `#[message]` takes no bare flags (serialization is enabled by `#[derive(Serialize)]`)
 --> tests/ui/bare_flag.rs:3:25
  |
3 | #[tracing_wide::message(serialize)]
  |                         ^^^^^^^^^
